# rusty-actions-github

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
benches/: action_speed.rs
src/: context.rs  core.rs  error.rs  lib.rs  logger.rs  main.rs  util.rs
